update swagger controlles
