# app/Http/Controllers/Swagger/BaseController.php
@@ -10,7 +10,7 @@ use App\Http\Controllers\Swagger\Controller as Controller;
  *     path="/api/v1/book",
  *     summary="Создание",
  *     tags={"Api"},
- *
+ *     security={{ "bearerAuth": {} }},
  *     @OA\RequestBody(
  *          @OA\JsonContent(
  *              allOf={
@@ -39,7 +39,7 @@ use App\Http\Controllers\Swagger\Controller as Controller;
  *      path="/api/v1/book",
  *      summary="Список",
  *      tags={"Api"},
- *
+ *      security={{ "bearerAuth": {} }},
  *      @OA\Response(
  *          response=404,
  *          description="Not found",
@@ -57,6 +57,7 @@ use App\Http\Controllers\Swagger\Controller as Controller;
  *       path="/api/v1/book/{book}",
  *       summary="Получение записи по id",
  *       tags={"Api"},
+ *       security={{ "bearerAuth": {} }},
  *       @OA\Parameter(
  *           description="ID книги",
  *           in="path",
@@ -81,6 +82,7 @@ use App\Http\Controllers\Swagger\Controller as Controller;
  *        path="/api/v1/book/{book}",
  *        summary="Обновление записи",
  *        tags={"Api"},
+ *        security={{ "bearerAuth": {} }},
  *        @OA\Parameter(
  *            description="ID книги",
  *            in="path",
@@ -112,10 +114,47 @@ use App\Http\Controllers\Swagger\Controller as Controller;
  *           ),
  *        ),
  * ),
+ * @OA\Post(
+ *        path="/api/v1/book/{book}/reserve",
+ *        summary="Бронирование книги",
+ *        tags={"Api"},
+ *        security={{ "bearerAuth": {} }},
+ *        @OA\Parameter(
+ *            description="ID книги",
+ *            in="path",
+ *            name="book",
+ *            required=true,
+ *            example=1
+ *        ),
+ *         @OA\Response(
+ *             response=404,
+ *             description="Not found",
+ *            ),
+ *         ),
+ *  ),
+ * @OA\Post(
+ *         path="/api/v1/book/{book}/unreserve",
+ *         summary="Возврат книги",
+ *         tags={"Api"},
+ *         security={{ "bearerAuth": {} }},
+ *         @OA\Parameter(
+ *             description="ID книги",
+ *             in="path",
+ *             name="book",
+ *             required=true,
+ *             example=1
+ *         ),
+ *          @OA\Response(
+ *              response=404,
+ *              description="Not found",
+ *             ),
+ *          ),
+ *   ),
  * @OA\Delete(
  *        path="/api/v1/book/{book}",
  *        summary="Удаление записи по id",
  *        tags={"Api"},
+ *        security={{ "bearerAuth": {} }},
  *        @OA\Parameter(
  *            description="ID книги",
  *            in="path",
